# bandcamp-timeline

adduser/: Cargo.toml
adduser/src/: main.rs
frontend/: index.d.ts  package-lock.json  package.json
frontend/lib/: types.ts
frontend/lib/utils/: aws.ts  session.ts
frontend/pages/: index.tsx
frontend/pages/api/auth/: checkSession.ts  login.ts  logout.ts
frontend/pages/api/release/: list.ts
frontend/styles/: globals.css
mailparser/: .gitignore  Cargo.toml  build_lambda.sh
mailparser/src/: main.rs
