[package]
name = "adduser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0"
dotenv = "0.15.0"
rand = "0.8.5"
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
tokio = { version = "1", features = ["full"] }
