[package]
name = "mailparser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail-parser = "0.4.5"
scraper = "0.12.0"
regex = "1"
serde = "1.0.136"
serde_json = "1.0.79"
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
aws-sdk-s3 = "0.11.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lambda_runtime = "0.4"
aws-sdk-sns = "0.11.0"